--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "outDir": "./dist/",
         "removeComments": true,
         "target": "ES2020",
+        "lib": ["ES2021", "DOM"],
         "preserveConstEnums": true,
         "moduleResolution": "Node",
         "types": ["node"],
